--- a/src/main/resources/layout/cells/server.fxml
+++ b/src/main/resources/layout/cells/server.fxml
@@ -29,9 +29,10 @@
     <MenuButton fx:id="optionsMenu" layoutX="389.0" layoutY="81.0" mnemonicParsing="false" text="⋮"
                 AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <items>
-            <MenuItem fx:id="optionsDelete" mnemonicParsing="false" text="Delete"/>
-            <MenuItem fx:id="optionsEdit" mnemonicParsing="false" text="Edit"/>
-            <MenuItem fx:id="optionsConnect" mnemonicParsing="false" text="Connect"/>
+            <MenuItem mnemonicParsing="false" onAction="#delete" text="Delete"/>
+            <MenuItem mnemonicParsing="false" onAction="#edit" text="Edit"/>
+            <MenuItem mnemonicParsing="false" onAction="#refresh" text="Refresh"/>
+            <MenuItem fx:id="optionsConnect" mnemonicParsing="false" onAction="#connect" disable="true" text="Connect"/>
         </items>
     </MenuButton>
 </AnchorPane>
