--- a/src/main/resources/layout/cells/server.fxml
+++ b/src/main/resources/layout/cells/server.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.TextFlow?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="root" maxHeight="-Infinity" maxWidth="500.0"
             minHeight="-Infinity" minWidth="500.0" onMouseClicked="#clicked" prefWidth="500.0"
             xmlns="http://javafx.com/javafx/11.0.1" fx:controller="de.bixilon.minosoft.gui.main.ServerListCell">
@@ -20,8 +21,15 @@
     <Label fx:id="players" layoutX="408.0" layoutY="8.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="5.0"/>
     <ImageView fx:id="ping" fitHeight="24.0" fitWidth="23.0" layoutX="463.0" layoutY="18.0" pickOnBounds="true"
                preserveRatio="true" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0"/>
-    <Label fx:id="motd" layoutX="104.0" layoutY="49.0" maxWidth="320.0" wrapText="true" AnchorPane.bottomAnchor="15.0"
-           AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="40.0"/>
+    <TextFlow
+            fx:id="motd"
+            layoutX="104.0"
+            layoutY="49.0"
+            maxWidth="320.0"
+            AnchorPane.bottomAnchor="15.0"
+            AnchorPane.leftAnchor="105.0"
+            AnchorPane.rightAnchor="100.0"
+            AnchorPane.topAnchor="40.0"/>
     <Label fx:id="version" layoutX="350.0" layoutY="8.0" text="Connecting..." AnchorPane.rightAnchor="110.0"
            AnchorPane.topAnchor="5.0"/>
     <MenuButton fx:id="optionsMenu" layoutX="389.0" layoutY="81.0" mnemonicParsing="false" text="⋮"
