--- a/src/main/resources/layout/settings.fxml
+++ b/src/main/resources/layout/settings.fxml
@@ -5,7 +5,7 @@
 
 <VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="640.0" fx:controller="de.bixilon.minosoft.gui.main.SettingsWindow">
     <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
-        <Tab text="General">
+        <Tab fx:id="general" text="-General-">
             <GridPane fx:id="tabGeneral" hgap="10" minHeight="0.0" minWidth="0.0" prefHeight="429.0" prefWidth="640.0" vgap="10">
                 <padding>
                     <Insets bottom="10" left="10" right="300" top="10" />
@@ -18,11 +18,11 @@
                     <RowConstraints />
                     <RowConstraints />
                 </rowConstraints>
-                <Label text="Log level" />
+                <Label fx:id="generalLogLevelLabel" text="-Log level-" />
                 <ComboBox fx:id="generalLogLevel" prefWidth="150.0" GridPane.columnIndex="1" />
             </GridPane>
         </Tab>
-        <Tab disable="true" text="Download">
+        <Tab disable="true"  fx:id="download" text="Download">
             <GridPane hgap="10" minHeight="0.0" minWidth="0.0" prefHeight="429.0" prefWidth="640.0" vgap="10">
                 <padding>
                     <Insets bottom="10" left="10" right="300" top="10" />
