--- a/src/main/resources/layout/main.fxml
+++ b/src/main/resources/layout/main.fxml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.input.KeyCodeCombination?>
-<?import javafx.scene.layout.*?>
 <!--
   ~ Minosoft
   ~ Copyright (C) 2020 Moritz Zwerger
@@ -14,6 +11,9 @@
   ~
   ~ This software is not affiliated with Mojang AB, the original developer of Minecraft.
   -->
+<?import javafx.scene.control.*?>
+<?import javafx.scene.input.KeyCodeCombination?>
+<?import javafx.scene.layout.*?>
 <VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="640.0" fx:controller="de.bixilon.minosoft.gui.main.MainWindow">
     <MenuBar VBox.vgrow="NEVER">
         <Menu fx:id="menuFile" mnemonicParsing="false" text="-_File-">
@@ -36,9 +36,9 @@
             <MenuItem fx:id="menuAccountManage" mnemonicParsing="false" onAction="#manageAccounts" text="-Manage-" />
         </Menu>
     </MenuBar>
-    <AnchorPane VBox.vgrow="ALWAYS">
+    <AnchorPane VBox.vgrow="ALWAYS" styleClass="anchor-pane">
         <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="14.0" layoutY="14.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <BorderPane fx:id="serversPane" />
+            <BorderPane fx:id="serversPane"/>
         </ScrollPane>
     </AnchorPane>
 </VBox>
