--- a/src/main/resources/layout/style.css
+++ b/src/main/resources/layout/style.css
@@ -10,7 +10,7 @@
 }
 
 .root {
-    -fx-background-color: -primary-color;
+    -fx-background-color: -secondary-color;
     -fx-text-fill: -secondary-text-color;
 }
 
@@ -20,8 +20,13 @@
     -fx-text-fill: -secondary-text-color;
 }
 
-.jfx-alert-content-container, .jfx-text-field, .label {
+.jfx-alert-content-container, .jfx-text-field {
     -fx-background-color: -secondary-color;
+    -fx-text-fill: -secondary-text-color;
+    -fx-prompt-text-fill: -secondary-light-color;
+}
+
+.label {
     -fx-text-fill: -secondary-text-color;
 }
 
@@ -52,5 +57,110 @@
 }
 
 .combo-box-base {
+    -fx-background-color: -secondary-color;
+}
+
+.jfx-progress-bar > .track {
+    -fx-background-color: -secondary-light-color;
+}
+
+.jfx-progress-bar > .bar, .jfx-progress-bar:indeterminate > .bar {
+    -fx-background-color: -primary-color;
+}
+
+.jfx-progress-bar > .secondary-bar,
+.jfx-progress-bar:indeterminate > .secondary-bar {
+    -fx-background-color: -secondary-light-color;
+}
+
+.list-cell {
+    -fx-background-color: -secondary-color;
+}
+
+.list-cell:selected {
+    -fx-background-color: -primary-color;
+}
+
+.list-cell:filled:hover {
+    -fx-background-color: -primary-dark-color;
+}
+
+.menu-bar {
+    -fx-background-color: -secondary-color;
+}
+
+.menu-item {
+    -fx-background-color: -secondary-color;
+    -fx-text-fill: -secondary-text-color;
+}
+
+.menu-item:selected {
+    -fx-background-color: -primary-color;
+}
+
+.menu-item:hover {
+    -fx-background-color: -primary-dark-color;
+}
+
+.menu-item:disabled {
+    -fx-opacity: 80%;
+}
+
+.menu-button {
+    -fx-background-color: -secondary-light-color;
+    -fx-text-fill: -secondary-text-color;
+}
+
+.menu-bar .menu-button {
+    -fx-background-color: -secondary-color;
+}
+
+.menu-bar .menu-button:hover {
+    -fx-background-color: -secondary-light-color;
+}
+
+.menu-bar {
+    -fx-background-color: -secondary-color;
+}
+
+.context-menu {
+    -fx-background-color: -secondary-color;
+}
+
+.tab-pane, .tab, .tab-header-area .tab-header-background {
+    -fx-background-color: -secondary-color;
+    -fx-text-fill: -secondary-text-color;
+}
+
+.tab:selected {
+    -fx-background-color: -secondary-light-color;
+}
+
+.tab-label {
+    -fx-text-fill: -secondary-text-color;
+}
+
+.vbox {
+    -fx-background-color: -secondary-color;
+    -fx-text-fill: -secondary-text-color;
+}
+
+.anchor-pane {
+    -fx-background-color: -secondary-color;
+}
+
+.scroll-pane {
+    -fx-background-color: -secondary-color;
+}
+
+.scroll-pane:selected {
+    -fx-background-color: -secondary-color;
+}
+
+.jfx-password-field {
+    -fx-text-fill: -secondary-text-color;
+}
+
+.list-view {
     -fx-background-color: -secondary-color;
 }
