--- a/src/main/resources/layout/style.css
+++ b/src/main/resources/layout/style.css
@@ -7,6 +7,7 @@
     -secondary-dark-color: #03111f;
     -primary-text-color: #000000;
     -secondary-text-color: #ffffff;
+    -secondary-light-light-color: #868191;
 }
 
 .root {
